# xray-assignment

./: .gitignore  API_TESTING.md  ARCHITECTURE.md  COMPLETE_SYSTEM_GUIDE.md  IMPLEMENTATION_PLAN.md  PHASED_IMPLEMENTATION.md  PRESENTATION_SCRIPT.md  QUICK_API_REFERENCE.md  README.md  USAGE_EXAMPLE.md  xray.code-workspace
docs/: README.md  api-reference.md  best-practices.md  getting-started.md  integration-guide.md  sdk-reference.md
examples/: README.md  competitor_selection_demo.py  debug_competitor_selection.py
xray-api/: pyproject.toml
xray-api/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
xray-api/app/routers/: __init__.py  ingest.py  query.py
xray-sdk/: README.md  pyproject.toml  test_client_manual.py  test_config_manual.py  test_context_manual.py  test_integration.py  test_models_manual.py  test_sampling_manual.py
xray-sdk/examples/: competitor_selection_demo.py
xray-sdk/xray/: __init__.py  client.py  config.py  context.py  models.py  sampling.py
